Send Verification SMS using API TWILIO

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
+        "twilio/sdk": "^8.0",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
